--- a/Presentation-2/slides.tex
+++ b/Presentation-2/slides.tex
@@ -68,6 +68,7 @@
 \end{flushright}
 \end{frame}
 
+\include{docs/intro.tex}
 \include{docs/parts.tex}
 \include{docs/tables.tex}
 \include{docs/counters.tex}
