add math journals

--- a/Presentation-2/docs/intro.tex
+++ b/Presentation-2/docs/intro.tex
@@ -57,6 +57,30 @@
 
 \item[-]
 بسیاری از مجله‌های تخصصی (بخصوص در رشته‌ی ریاضی) تنها مقالاتی را برای چاپ قبول می‌کنند که با لاتک نوشته شده باشند.
+
+برای مثال:
+\begin{itemize}\itemr
+\item[-]
+\lr{Acta Numerica}
+
+\begin{flushleft}
+\url{https://www.cambridge.org/core/journals/acta-numerica}
+\end{flushleft}
+
+\item[--]
+\lr{Inventiones mathematicae}
+
+\begin{flushleft}
+\url{https://www.springer.com/journal/222}
+\end{flushleft}
+
+\item[--]
+\lr{Journal of the American Mathematical Society}
+
+\begin{flushleft}
+\url{https://www.ams.org/publications/journals/journalsframework/jams}
+\end{flushleft}
+\end{itemize}
 \end{itemize}
 \end{frame}
 
