add bidipoem for traditionalpoem

--- a/Presentation-2/docs/tradpoem.tex
+++ b/Presentation-2/docs/tradpoem.tex
@@ -5,7 +5,9 @@
 نوشتن شعر فارسی هم به راحتی نوشتن دیگر امکانات لاتک است.
 
 \item[-]
-برای نوشتن شعر فارسی باید از محیط 
+برای نوشتن شعر فارسی باید از بسته 
+\lr{\texttt{bidipoem}}
+و محیط 
 \lr{\texttt{traditionalpoem}}
 استفاده کرد.
 \end{itemize}
