--- a/Presentation-2/docs/parts.tex
+++ b/Presentation-2/docs/parts.tex
@@ -17,7 +17,7 @@
 \lr{\texttt{report}}،
 \lr{\texttt{book}} و
 \lr{\texttt{letter}}
-و موارد زیادی دیگری‌ست که لیست بلندی از آنها در 
+و موارد زیاد دیگری‌ست که لیست بلندی از آن‌ها در 
 \url{https://ctan.org/topic/class}
 موجود است.
 \end{itemize}
