--- a/Presentation-3/docs/intro.tex
+++ b/Presentation-3/docs/intro.tex
@@ -1,1 +1,17 @@
 \section{مقدمه}
+\begin{frame}{مقدمه}
+\begin{itemize}\itemr
+\item[-]
+در این ارائه به بررسی معماری کامپیوتر می‌پردازیم
+\item[-]
+ابتدا سرگذشت و روند تکاملی معماری را بررسی می‌کنیم،
+\item[-]
+سپس به معرفی اجزای اصلی یک کامپیوتر می‌پردازیم،
+\item[-]
+پس از آن به داخل \lr{CPU} می‌رویم و معماری‌های متفاوت آن را می‌بینیم،
+\item[-]
+سپس در مورد آینده‌ی معماری کامپیوتر صحبت می‌کنیم
+\item[-]
+و در آخر، تاثیر هوش مصنوعی به روی معماری کامپیوتر را بررسی می‌کنیم.
+\end{itemize}
+\end{frame}
