intro of the evolution and the first generation of CA is done

--- a/Presentation-3/docs/histroy.tex
+++ b/Presentation-3/docs/histroy.tex
@@ -1,1 +1,49 @@
 \section{معماری کامپیوتر - دیروز تا امروز}
+\begin{frame}{تکامل معماری کامپیوتر}
+\begin{itemize}\itemr
+\item[-]
+در دنیای امروزی کامپیوتر‌ها برای اهداف زیاد و توسط افراد زیادی استفاده می‌شوند،
+\item[-]
+کارها و اتفاقاتی که زمانی غیر قابل تصور بود، برای جامعه‌ی ما بسیار بدیهی و مرسوم است،
+\item[-]
+تکنولوژی معماری‌ کامپیوتر در طول سالیان متمادی، عمدتا به دلیل پیشرفت‌های تکنولوژی ساخت قطعات الکترونیکی، پیشرفت علوم کامپیوتر و نیاز‌‌های افراد پیشرفت کرده است.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{نسل اول کامپیوتر‌ها}
+\begin{itemize}\itemr
+\item[-]
+در سال ۱۹۳۷، اولین کامپیوتر با استفاده از لامپ‌های خلاء توسط پروفسور ایکن اختراع شد.
+\item[-]
+در سال ۱۹۴۷، دانشگاه پنسیلوانیا کامپیوتری به نام 
+\lr{ENIAC}
+را طراحی کرد که از مبنای دودویی برای نمایش اطلاعات استفاده می‌کرد.
+\item[-]
+معماری کامپیوتر‌های این دوره (و تمام دوره‌ها،) بر اساس مدل 
+\lr{Von Neumann}
+بود (و هست،) که شامل 
+\begin{enumerate}\itemr
+\item 
+واحد‌ حافظه،
+\item 
+واحد پردازش، 
+\item 
+واحد کنترل و
+\item 
+واحد ورودی/خروجی 
+\end{enumerate}
+می‌شود.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{نسل دوم کامپیوتر‌ها}
+\begin{itemize}\itemr
+\item[-]
+\end{itemize}
+\end{frame}
+
+\begin{frame}{نسل سوم کامپیوتر‌ها}
+\begin{itemize}\itemr
+\item[-]
+\end{itemize}
+\end{frame}
