add the second generation of CA is done

--- a/Presentation-3/docs/histroy.tex
+++ b/Presentation-3/docs/histroy.tex
@@ -39,6 +39,15 @@
 \begin{frame}{نسل دوم کامپیوتر‌ها}
 \begin{itemize}\itemr
 \item[-]
+در دهه‌ي ۱۹۵۰، ترانزیستور‌ها به جای لامپ‌های خلاء در کامپیوتر‌ها استفاده شدند،
+\item[-]
+این باعث کاهش حجم و افزایش سرعت کامپیوتر‌ها شد.
+\item[-]
+در این دوره کامپیوتر‌های دیجیتال شروع به ظهور کردند و از 
+\lr{IC}ها
+برای طراحی پردازند‌ه‌ها استفاده شد.
+\item[-]
+این دوره شاهد ظهور کامپیوتر‌های دیجیتال و مینی‌کامپیوتر‌ها بود.
 \end{itemize}
 \end{frame}
 
