--- a/Presentation-3/docs/histroy.tex
+++ b/Presentation-3/docs/histroy.tex
@@ -43,16 +43,13 @@
 \item[-]
 این باعث کاهش حجم و افزایش سرعت کامپیوتر‌ها شد.
 \item[-]
-در این دوره کامپیوتر‌های دیجیتال شروع به ظهور کردند و از 
-\lr{IC}ها
-برای طراحی پردازند‌ه‌ها استفاده شد.
-\item[-]
-این دوره شاهد ظهور کامپیوتر‌های دیجیتال و مینی‌کامپیوتر‌ها بود.
+در این دوره کامپیوتر‌های دیجیتال و مینی‌کامپیوترها شروع به ظهور کردند
 \end{itemize}
 \end{frame}
 
 \begin{frame}{نسل سوم کامپیوتر‌ها}
 \begin{itemize}\itemr
 \item[-]
+
 \end{itemize}
 \end{frame}
