fix the third gen

--- a/Presentation-3/docs/histroy.tex
+++ b/Presentation-3/docs/histroy.tex
@@ -50,6 +50,20 @@
 \begin{frame}{نسل سوم کامپیوتر‌ها}
 \begin{itemize}\itemr
 \item[-]
-
+در دهه‌ی ۱۹۶۰، مدار‌های مجتمع 
+\lr{(IC)}
+جایگزین ترانزیستور‌ها شدند.
+\item[-]
+استفاده از \lr{IC}ها باعث افزایش قابلیت پیچیدگی و کارای کامپیوتر‌ها شد.
+\item[-]
+این به این معنی‌ست که تعداد بیشتری ترانزیستور‌ها را در یک تراشه کوچک‌تر قرار دادند و این امر به کامپیوتر امکان انجام محاسبات پیچیده‌تر و سریع‌تر را می‌داد.
+\item[-]
+کامپیوتر‌های این دوره (و دوره‌‌های بعدی) از معماری مجموعه دستورات 
+\lr{(Instruction Set Architecture)}
+استفاده می‌کردند.
+\item[-]
+معماری کامپیوتر 
+\lr{IBM 360}
+از معماری‌های مشهور این دوره است.
 \end{itemize}
 \end{frame}
