fix the four gen

--- a/Presentation-3/docs/histroy.tex
+++ b/Presentation-3/docs/histroy.tex
@@ -67,3 +67,16 @@
 از معماری‌های مشهور این دوره است.
 \end{itemize}
 \end{frame}
+
+\begin{frame}{نسل چهارم کامپیوتر‌‌ها}
+\begin{itemize}\itemr
+\item[-]
+در دهه‌ ۱۹۷۰، ریزپردازنده‌‌ها به جای 
+\lr{IC}ها
+استفاده شدند. 
+\item[-]
+این باعث افزایش قابلیت انعطاف پذیری و کاهش هزینه‌ی ساخت کامپیوتر‌ها شد.
+\item[-]
+در این دوره معماری کامپیوتر‌ها شخصی و کامپیوتر‌های قابل حمل توسعه یافت.
+\end{itemize}
+\end{frame}
