--- a/Presentation-3/docs/histroy.tex
+++ b/Presentation-3/docs/histroy.tex
@@ -80,3 +80,30 @@
 در این دوره معماری کامپیوتر‌ها شخصی و کامپیوتر‌های قابل حمل توسعه یافت.
 \end{itemize}
 \end{frame}
+
+\begin{frame}{نسل پنجم کامپیوتر‌ها}
+\begin{itemize}\itemr
+\item[-]
+در دوره‌ی نسل پنجم کامپیوتر‌‌ها که از دهه‌ی ۱۹۸۰ شروع شد، تحولات مهمی در معماری کامیپوتر رخ داد.
+\item[-]
+در این دوره کامپیوتر‌های موازی که قدرت پردازش با با استفاده از چندین واحد پردازشگر به صورت همزمان را داشتند، طراحی و ساخته شدند.
+\item[-]
+کامپیوتر‌‌های برداری، یکی دیگر از پیشرفت‌ها این دوره بود. این کامپیوتر‌‌ها مجهز به پردازنده‌‌هایی بودند که مخصوص انجام عملیات به روی بردارها و ماتریس‌ها بودند و برای برنامه‌های علمی و مهندسی که با این داده‌‌ها سر و کار داشتند بسیار مناسب بودند.
+\item[-]
+در این دوره استفاده از 
+\lr{IC}های 
+فوق بزرگ
+\lr{(VLSI)}
+و 
+\lr{IC}های
+فوق فوق بزرگ
+\lr{(ULSI)}
+نیز رایج شد.
+\item[-]
+در این دوره شاهد ظهور کامپیوتر‌های شخصی
+\lr{(Personal Computer)}
+و سیستم‌های توزیع شده
+\lr{(Distributed Systems)}
+هستیم.
+\end{itemize}
+\end{frame}
