write the intor of AI part

--- a/Presentation-3/docs/ai.tex
+++ b/Presentation-3/docs/ai.tex
@@ -1,1 +1,18 @@
 \section{هوش مصنوعی و معماری کامپیوتر}
+\begin{frame}{مقدمه}
+\begin{itemize}\itemr
+\item[-]
+در دهه‌های ۸۰ و ۹۰ میلادی، کامپیوتر‌‌ها هر ۱۸ تا ۲۴ ماه (قانون مور) سریع‌تر می‌شدند.
+\item[-]
+این یعنی اگر شما امسال یک کامپیوتر می‌خریدید و دوستان شما یک سال بعد از شما کامپیوتر جدیدی می‌خریدند، کامپیوتر‌ آنها بسیار سریع‌تر می‌بود
+\item[-]
+اما امروزه، تنها راه پیشرفت در معماری کامپیوتر ساخت سخت‌افزار برای یک کاربرد خاص است.
+\item[-]
+برای مثال پردازند‌ه‌ها گرافیکی
+\lr{(GPU)}
+برای انجام محاسبات گرافیکی بسیار کارامد هستند. آنها می‌توانند میلیون‌ها ضرب ماتریس در یک هر ثانیه انجام بدهند.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{پردازنده‌ی \lr{TPU}}
+\end{frame}
