--- a/Presentation-3/docs/ai.tex
+++ b/Presentation-3/docs/ai.tex
@@ -15,4 +15,16 @@
 \end{frame}
 
 \begin{frame}{پردازنده‌ی \lr{TPU}}
+\begin{itemize}\itemr
+\item[-]
+با رخ دادن انقلابی در هوش مصنوعی به نام \textbf{یادگیری ماشین} که به ضرب ماتریسی متکی بود، نیاز به پردازنده‌های مخصوص ضرب تانسور‌ها برای اجرا سریع‌تر و دقیق‌تر الگوریتم‌ها یادگیری ماشین احساس می‌شد،
+\item[-]
+واحد پردازش تانسور
+\lr{(Tensor Processing Unit (TPU))}
+شتاب‌دهنده‌ی یادگیری ماشین است که توسط گوگل طراحی شده است. 
+\lr{TPU}ها
+برای ضرب ماتریس‌ها بسیار کارامند هستند که برای آموزش شبکه‌های عصبی 
+\lr{ANN}
+ضروریست.
+\end{itemize}
 \end{frame}
