--- a/Presentation-3/docs/ai.tex
+++ b/Presentation-3/docs/ai.tex
@@ -28,3 +28,15 @@
 ضروریست.
 \end{itemize}
 \end{frame}
+
+\begin{frame}{طراحی سطح بالا}
+\begin{center}
+\includegraphics[width=0.9\textwidth, height=0.8\textheight]{docs/images/tpu-1}
+\end{center}
+\end{frame}
+
+\begin{frame}{کارایی/توان مصرفی}
+\begin{center}
+\includegraphics[width=0.9\textwidth, height=0.8\textheight]{docs/images/tpu-2}
+\end{center}
+\end{frame}
