--- a/Presentation-3/docs/archs.tex
+++ b/Presentation-3/docs/archs.tex
@@ -1,1 +1,45 @@
 \section{معماری‌های مختلف}
+\begin{frame}{مقدمه}
+\begin{itemize}\itemr
+\item[-]
+اگر شما الان بخواهید یک کامپیوتر بخرید، از بین معماری‌های مختلف دو معماری اصلی پیش روی شما هستند:
+\begin{enumerate}\itemr
+\item \lr{x86}
+\item \lr{ARM}
+\end{enumerate}
+\end{itemize}
+\end{frame}
+
+\begin{frame}{معماری \lr{x86}}
+\begin{itemize}\itemr
+\item[-]
+این معماری بر پایه‌ی معماری 
+\lr{Inter 8008}
+که در سال ۱۹۷۲ معرفی شد، است.
+\item[-]
+در واقع کد‌هایی که برای این معماری نوشته شده‌اند را می‌توان برای آخرین 
+\lr{CPU}های
+\lr{Intel} 
+یا
+\lr{AMD}
+اسمبل و اجرا کرد.
+\item[-]
+پس از
+\lr{Intel 8008}
+معماری‌های
+\lr{Intel 8088}،
+\lr{16-bit 8086} و سپس
+\lr{80186}،
+\lr{80286} 
+و... معرفی شدند و در کل 
+\lr{x86}
+نام گرفتند.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{معماری \lr{ARM}}
+\begin{itemize}\itemr
+\item[-]
+
+\end{itemize}
+\end{frame}
