--- a/Presentation-3/docs/archs.tex
+++ b/Presentation-3/docs/archs.tex
@@ -34,12 +34,42 @@
 و... معرفی شدند و در کل 
 \lr{x86}
 نام گرفتند.
+\item[-]
+پردازنده‌های شرکت‌های 
+\lr{Intel}
+و 
+\lr{AMD}
+همگی بر پایه این معماری هستند.
 \end{itemize}
 \end{frame}
 
 \begin{frame}{معماری \lr{ARM}}
 \begin{itemize}\itemr
 \item[-]
+نام این معماری برگرفته از 
+\lr{\textbf{A}dvanced \textbf{R}ISC \textbf{M}achines}
+که قبل‌تر از
+\lr{\textbf{A}corn \textbf{R}ISC \textbf{M}achine}
+گرفته شده بود، است.
+\item[-]
+پردازنده‌های آرم، بخاطر 
+\begin{itemize}\itemr
+\item[-]
+قیمت ارزان،
+\item[-]
+مصرف انرژی کم و
+\item[-]
+تولید گرمای کم
+\end{itemize}
+\begin{flushright}
+برای دستگاه‌های سبک و دارای باتری، مثل تلفن‌های هوشمند و لپ‌تاپ‌ها بسیار مناسب هستند.
+\end{flushright}
 
+\item[-]
+بین سال‌های ۲۰۲۰ تا ۲۰۲۲ سریع‌ترین سوپرکامپیوتر دنیا 
+\lr{(Fugako)}
+هم از پردازنده‌های معماری آرم استفاده می‌کرد.
+\item[-]
+چیپ‌های سری \lr{M} شرکت اپل هم از معماری آرم استفاده می‌کنند.
 \end{itemize}
 \end{frame}
