--- a/Presentation-3/docs/core.tex
+++ b/Presentation-3/docs/core.tex
@@ -48,6 +48,31 @@
 \end{center}
 \end{frame}
 
+\begin{frame}{\lr{Control Unit}}
+\begin{itemize}\itemr
+\item[-]
+وقتی برای یک معماری، 
+\lr{Instruction Set}
+نوشته می‌شود، به این معنی‌ست که هر یک از 
+\lr{instruction}
+ها یک معنی می‌دهد، یک سری ریجستر خاص را نیاز دارد و باید از مسیر متفاوتی از داخل 
+\lr{data path}
+رد بشود،
+\item[-]
+کدگشایی و کنترل کردن مسیر گذر یک 
+\lr{instruction}
+و داده‌هایش به عهده‌ی 
+\lr{Control Unit}
+است.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{\lr{Data Path and Control Unit}}
+\begin{center}
+\includegraphics[width=0.65\textwidth, height=0.80\textheight]{docs/images/dp-cu}
+\end{center}
+\end{frame}
+
 \begin{frame}{\lr{AMD Barceloca Microprocessor}}
 \begin{center}
 \includegraphics[width=0.50\textwidth, height=0.80\textheight]{docs/images/amd-1}
