add the future part

--- a/Presentation-3/docs/future.tex
+++ b/Presentation-3/docs/future.tex
@@ -1,1 +1,35 @@
 \section{معماری کامپیوتر در آینده}
+\begin{frame}{آینده‌ی معماری کامپیوتر $\leftarrow$ رفع نیاز‌های جدید}
+\begin{itemize}\itemr
+\item[-]
+هوش مصنوعی و یادگیری ماشین
+\item[-]
+پردازش‌‌های داده‌های کلان
+\item[-]
+محاسبات کوانتومی
+\item[-]
+محاسبات نورومورفیک
+\end{itemize}
+\end{frame}
+
+\begin{frame}{معماری کوانتومی}
+\begin{center}
+\lr{Qubits}
+-کیوبیت بجای بیت‌های صفر و یک.
+
+استفاده از گیت‌ها و ساختار‌های جدید بر اساس کیوبیت‌ها
+\end{center}
+\begin{flushright}
+نتایج:
+\end{flushright}
+\begin{itemize}\itemr
+\item[-]
+سرعت بالا در حل مسائل پیچیده
+\item[-]
+توانایی محاسبات مختلف به صورت موازی و همزمان
+\item[-]
+دسترسی به رمزنگاری و امنیت بالاتر
+\item[-]
+فناوری‌های نورومورفیک
+\end{itemize}
+\end{frame}
