--- a/Presentation-3/docs/archs.tex
+++ b/Presentation-3/docs/archs.tex
@@ -14,7 +14,7 @@
 \begin{itemize}\itemr
 \item[-]
 این معماری بر پایه‌ی معماری 
-\lr{Inter 8008}
+\lr{Intel 8008}
 که در سال ۱۹۷۲ معرفی شد، است.
 \item[-]
 در واقع کد‌هایی که برای این معماری نوشته شده‌اند را می‌توان برای آخرین 
