--- a/Presentation-3/docs/core.tex
+++ b/Presentation-3/docs/core.tex
@@ -73,19 +73,19 @@
 \end{center}
 \end{frame}
 
-\begin{frame}{\lr{AMD Barceloca Microprocessor}}
+\begin{frame}{\lr{AMD Barcelona Microprocessor}}
 \begin{center}
 \includegraphics[width=0.50\textwidth, height=0.80\textheight]{docs/images/amd-1}
 \end{center}
 \end{frame}
 
-\begin{frame}{\lr{AMD Barceloca Microprocessor Sketch}}
+\begin{frame}{\lr{AMD Barcelona Microprocessor Sketch}}
 \begin{center}
 \includegraphics[width=0.5\textwidth, height=0.80\textheight]{docs/images/amd-2}
 \end{center}
 \end{frame}
 
-\begin{frame}{\lr{AMD Barceloca Microprocessor}}
+\begin{frame}{\lr{AMD Barcelona Microprocessor}}
 \begin{center}
 \includegraphics[width=0.9\textwidth, height=0.80\textheight]{docs/images/amd-3}
 \end{center}
