--- a/Presentation-3/RPT-HW3-13-2.tex
+++ b/Presentation-3/RPT-HW3-13-2.tex
@@ -34,7 +34,7 @@
 \settextfont{Yas}
 
 \input{docs/macros}
-\title{\lr{\LaTeX}}
+\title{\lr{Computer Architecture}}
 \author{
 فاطمه علی‌ملکی \\
 امیررضا جهانگیری \\
