write the intro

--- a/Extra3/docs/intro.tex
+++ b/Extra3/docs/intro.tex
@@ -1,1 +1,20 @@
 \section{مقدمه}
+\begin{frame}{مقدمه}
+\begin{itemize}\itemr
+\item[-]<1->
+در این ارائه به بررسی طراحی کامپایلر می‌پردازیم.
+
+\item[-]<2->
+در این ارائه سعی شده است که با نشان دادن مثال و کد‌های واقعی فهم قسمت‌های مختلف یک کامپایلر (یا مفسر) برای شما ساده شود.
+
+\item[-]<3->
+در ابتدا به معرفی و بررسی قسمت‌های مختلف یک کامپایلر پرداخته می‌شود.
+
+\item[-]<4->
+در حین معرفی و توضیح، مثال‌هایی از آن قسمت نشان داده می‌شود،
+
+\item[-]<5->
+و در پایان دو کتاب برای مطالعه‌ی عمیق روی کامپایلر‌ها و مفسرها معرفی می‌شوند.
+
+\end{itemize}
+\end{frame}
