add the interpreter part

--- a/Extra3/docs/language-processors.tex
+++ b/Extra3/docs/language-processors.tex
@@ -26,3 +26,16 @@
 \end{figure}
 \end{itemize}
 \end{frame}
+
+\begin{frame}{مفسر}
+\begin{itemize}\itemr
+\item[-]
+نوع دیگری از پردازش‌گر‌های زبانی، مفسرها هستند که بجای تبدیل زبان به زبان دیگر (\lr{\textit{target}})، خود مستقیما مسئول اجرای زبان اول (\lr{\textit{source}}) می‌شوند.
+\vspace{5mm}
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.7\textwidth, height=0.3\textheight, angle=0]{docs/images/interpreter}
+\end{center}
+\end{figure}
+\end{itemize}
+\end{frame}
