--- a/Extra3/docs/language-processors.tex
+++ b/Extra3/docs/language-processors.tex
@@ -39,3 +39,35 @@
 \end{figure}
 \end{itemize}
 \end{frame}
+
+\begin{frame}{یک سیستم پردازشگر زبان - \lr{Preprocessor}}
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.5\textwidth, height=0.5\textheight, angle=0.6]{docs/images/preprocessor}
+\end{center}
+\end{figure}
+\end{frame}
+
+\begin{frame}{یک سیستم پردازشگر زبان - \lr{Compiler}}
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.5\textwidth, height=0.5\textheight, angle=0.6]{docs/images/compiler}
+\end{center}
+\end{figure}
+\end{frame}
+
+\begin{frame}{یک سیستم پردازشگر زبان - \lr{Assembler}}
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.5\textwidth, height=0.5\textheight, angle=0.6]{docs/images/assembler}
+\end{center}
+\end{figure}
+\end{frame}
+
+\begin{frame}{یک سیستم پردازشگر زبان - \lr{Linker/Loader}}
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.75\textwidth, height=0.5\textheight, angle=0.4]{docs/images/linkerloader}
+\end{center}
+\end{figure}
+\end{frame}
