add first slide of the structure of compiler

--- a/Extra3/docs/language-processors.tex
+++ b/Extra3/docs/language-processors.tex
@@ -50,10 +50,10 @@
 
 \begin{frame}[fragile]{\lr{Preprocessor}}
 \begin{itemize}\itemr
-\item[-]
+\item[-]<1->
 زبان‌های کهنی مثل \lr{C} و \lr{C++} سیستم \lr{moduling} و ساختاربندی منظمی برای جدا کردن \lr{source code}هایشان نداشتند.
 
-\item[-]
+\item[-]<2->
 اما زبان‌های جدیدتر مثل \lr{Python} چنین سیستمی را دارند.
 
 \begin{latin}
@@ -67,13 +67,10 @@ from csv import reader, writer
 
 \begin{frame}{\lr{Preprocessor}}
 \begin{itemize}\itemr
-\item[-]
+\item[-]<1->
 به همین دلیل، آنها نیاز داشتند که وقتی برنامه‌ای که نوشته‌اند را به چندین فایل تقسیم کرده‌اند، کامپایل کنند، برنامه‌ای تمام \lr{source code}هایشان را به یک 
 \lr{source code}
-واحد تبدیل کرده و آن را به کامپایلر بدهند.
-
-\item[-]
-که بخاطر این نیاز، نرم‌افزاری به نام 
+واحد تبدیل کرده و آن را به کامپایلر بدهند، که بخاطر این نیاز، نرم‌افزاری به نام 
 \lr{Preprocessor}
 نوشته شد.
 \end{itemize}
