explain the front and back ends

--- a/Extra3/docs/structure.tex
+++ b/Extra3/docs/structure.tex
@@ -1,9 +1,9 @@
 \section{ساختار یک کامپایلر}
 \begin{frame}{ساختار کلی}
 \begin{itemize}\itemr
-\item[-]<1->
+\item[-]
 تا کنون به کامپایلر به عنوان یک جعبه دارای ورودی خروجی نگاه می‌کردیم،
-\item[-]<2->
+\item[-]
 اما اگر این جعبه را باز کنیم، با دو قسمت اصلی در کامپایلر‌ها مواجه می‌شویم:
 \begin{enumerate}\itemr
 \item 
@@ -11,5 +11,35 @@
 \item 
 سنتز
 \end{enumerate}
+\end{itemize}
+\end{frame}
+
+\begin{frame}{آنالیز}
+\begin{itemize}\itemr
+\item[-]
+این قسمت، \lr{source code} را به قسمت‌های مختلفی می‌شکند،
+
+\item[-]
+و قواعد گرامی را به قسمت‌های مختلف تحمیل می‌کند.
+
+\item[-]
+این قسمت، اگر قسمتی را مخالف قوانین و گرامر زبان پیدا کند، پیام‌های مطلع کننده‌ای به کار نشان می‌دهد که ورودی را اصلاح کند.
+
+\item[-]
+و در پایان این قسمت، داده ساختاری به نام \lr{\textit{symbol table}} را تولید می‌کند که تقریبا در تمامی گام‌های کامپایل (که در ادامه به آنها پرداخته می‌شود،) استفاده می‌شود.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{سنتز}
+\begin{itemize}\itemr
+\item[-]
+قسمت سنتز، بعد از رد شدن از تمامی مراحل قسمت آنالیز، خروجی مورد نیاز ما را تولید می‌کند.
+
+\item[-]
+به قسمت آنالیز 
+\lr{front-end}
+و قسمت سنتز
+\lr{back-end}
+هم گفته می‌شود.
 \end{itemize}
 \end{frame}
