add front and back ends pictures

--- a/Extra3/docs/structure.tex
+++ b/Extra3/docs/structure.tex
@@ -43,3 +43,19 @@
 هم گفته می‌شود.
 \end{itemize}
 \end{frame}
+
+\begin{frame}{\lr{front-end}}
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.5\textwidth, height=0.8\textheight, angle=-0.5]{docs/images/front}
+\end{center}
+\end{figure}
+\end{frame}
+
+\begin{frame}{\lr{back-end}}
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.5\textwidth, height=0.6\textheight, angle=-0.5]{docs/images/back}
+\end{center}
+\end{figure}
+\end{frame}
