--- a/Extra3/docs/structure.tex
+++ b/Extra3/docs/structure.tex
@@ -59,3 +59,52 @@
 \end{center}
 \end{figure}
 \end{frame}
+
+\begin{frame}{تحلیل واژگانی \lr{(Lexical Analysis)}}
+\begin{itemize}\itemr
+\item[-]
+اولین کار کامپایلر اسکن کردن فایل داده شده و شکستن آن به توکن‌های کوچک‌تریست که در آن زبان تعریف شده.
+
+\item[-]
+چیزی که تحلیل‌گر واژگان تولید می‌کند، دنباله‌ای از چنین ترکیبی‌ست:
+\begin{equation*}
+\left\langle\text{\lr{token-name}}, \text{\lr{attribute-value}}\right\rangle 
+\end{equation*}
+\end{itemize}
+\end{frame}
+
+\begin{frame}{تحلیل واژگانی \lr{(Lexical Analysis)}}
+\begin{itemize}\itemr
+\item[-]
+فرض کنید چنین عبارتی را می‌خواهیم آنالیز کنیم:
+
+\begin{flushleft}
+\lr{\texttt{position = initial + rate * 60}}
+\end{flushleft}
+\item[-]
+چیزی که تحلیل‌گر واژگان تولید می‌کند:
+\begin{equation*}
+\token{1} 
+\left\langle\text{\lr{\texttt{=}}}\right\rangle
+\token{2}
+\left\langle\text{\lr{\texttt{+}}}\right\rangle
+\token{3}
+\left\langle\ast\right\rangle
+\left\langle\text{\lr{\texttt{60}}}\right\rangle
+\end{equation*}
+
+\item[-]
+که 
+\lr{\textbf{id}}
+مخفف 
+\lr{identifier}
+و عدد روبه‌روی آن اندیس 
+\lr{symbol table}
+است.
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.25\textwidth, height=0.3\textheight]{docs/images/symboltable}
+\end{center}
+\end{figure}
+\end{itemize}
+\end{frame}
