complete syntax part

--- a/Extra3/docs/structure.tex
+++ b/Extra3/docs/structure.tex
@@ -108,3 +108,19 @@
 \end{figure}
 \end{itemize}
 \end{frame}
+
+\begin{frame}{تحلیل نحوی \lr{(Syntax Analysis)}}
+\begin{itemize}\itemr
+\item[-]
+سپس توکن به قسمت بعدی که تحلیل‌گر نحوی است فرستاده می‌شوند.
+
+\item[-]
+در این قسمت با توجه به گرامر زبان، یک ساختار درختی از توکن‌ها تولید می‌شود که با قواعد زبان سازگار است (یکی از قواعد تقدم عملگرهای ریاضیست)
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.25\textwidth, height=0.31\textheight]{docs/images/syntax}
+\end{center}
+\end{figure}
+\end{itemize}
+\end{frame}
