add intermediate part

--- a/Extra3/docs/structure.tex
+++ b/Extra3/docs/structure.tex
@@ -163,3 +163,17 @@
 \end{figure}
 \end{itemize}
 \end{frame}
+
+
+\begin{frame}{تولید کد میانی \lr{(Intermediate Code Generation)}}
+\begin{itemize}\itemr
+\item[-]
+کامپایلر‌های غالبا بعد از طی کردن مراحل قبل، کدی که بتوان آنرا بسادگی تولید و بسادگی ترجمه کرد را تولید می‌کنند تا سپس بتوانند آن را در مرحله‌ی بعدی بهینه کنند.
+\vspace{5mm}
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.3\textwidth, height=0.4\textheight, angle=1]{docs/images/intermediate}
+\end{center}
+\end{figure}
+\end{itemize}
+\end{frame}
