add optimize part

--- a/Extra3/docs/structure.tex
+++ b/Extra3/docs/structure.tex
@@ -177,3 +177,27 @@
 \end{figure}
 \end{itemize}
 \end{frame}
+
+\begin{frame}{بهینه‌سازی کد \lr{(Code Optimization)}}
+\begin{itemize}\itemr
+\item[-]
+یکی از قسمت‌های بسیار مهم در کامپایلر‌های قسمت بهینه‌سازی کد است. کامپایلر‌های کنونی بسیار باهوش هستند و می‌توانند روند کدی که نوشته شده را بررسی با توجه به 
+\lr{ISA}
+معماری‌ای که برای آن می‌خواهند کد ماشین تولید کنند، بهترین دستورات را انتخاب کنند تا برنامه سریع‌تر اجرا شود.
+
+\item[-]
+به نظر شما یک کد اسمبلی که یک برنامه‌نویس آن را نوشته سریع‌تر است یا یک کدی که به زبان 
+\lr{C}
+نوشته شده و توسط یک کامپایلر مثل 
+\lr{GCC}
+یا 
+\lr{Clang}
+به اسمبلی ترجمه شده؟
+\vspace{6mm}
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.25\textwidth, height=0.31\textheight, angle=1]{docs/images/optimizer}
+\end{center}
+\end{figure}
+\end{itemize}
+\end{frame}
