add refs and finilize

--- a/Extra3/docs/structure.tex
+++ b/Extra3/docs/structure.tex
@@ -201,3 +201,16 @@
 \end{figure}
 \end{itemize}
 \end{frame}
+
+\begin{frame}{تولید کد\lr{(Code Generation)}}
+\begin{itemize}\itemr
+\item[-]
+در آخرین مرحله، کد‌های بهینه شده، از کد میانی کامپایلر به کد‌های ماشین واقعی ترجمه می‌شوند.
+\vspace{6mm}
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.3\textwidth, height=0.4\textheight, angle=1]{docs/images/generator}
+\end{center}
+\end{figure}
+\end{itemize}
+\end{frame}
