write the intro and evolution sections

--- a/Article/RTP-HW4-02-02.tex
+++ b/Article/RTP-HW4-02-02.tex
@@ -188,17 +188,36 @@
 \section{معماری کامپیوتر - دیروز تا امروز}
 \vskip 0.4 true cm
 
-\section{اجزا}
-\vskip 0.4 true cm
+در دنیایی که ما امروزه می‌شناسیم رایانه‌ها برای اهداف زیاد و توسط افراد زیادی استفاده می‌شوند. آنها قادرند چیزهای جذابی را به نمایش بگذارند که ذهن مارا متحیر میکند. اتفاقی که زمانی غیر قابل تصور بود برای جامعه ما مرسوم است.
 
-\section{معماری‌‌های مختلف}
-\vskip 0.4 true cm
+تکنولوژی معماری کامپیوتر در طول سالیان متمادی تکامل یافته است. تغییرات در معماری کامپیوتری عمدتاً به دلیل پیشرفت‌های تکنولوژی ساخت قطعات الکترونیکی، نیاز‌های کاربران و پیشرفت علوم رخ داده است. در ادامه به خلاصه‌ای از تکامل معماری کامپیوتر از زمان ظهور اولین کامپیوترها تا به امروز می‌پردازیم. 
 
-\section{معماری کامپیوتر در آینده}
-\vskip 0.4 true cm
+\begin{enumerate}
+\item نسل اول کامپیوترها
 
-\section{هوش مصنوعی و معماری کامپیوتر}
-\vskip 0.4 true cm
+در سال ۱۹۳۷، اولین کامپیوتر با استفاده از لامپ‌های خلاء توسط پروفسور ایکن اختراع شد. در سال ۱۹۴۷، دانشگاه پنسیلوانیا کامپیوتری به نام \lr{ENIAC} را طراحی کرد که از مبنای دودویی برای نمایش اطلاعات استفاده می‌کرد.\footnote{مشهورترین نمونه از این دوره می‌باشد} در این دوره، کامپیوترها از لامپ‌های خلاء و رله‌ها برای اجرای عملیات استفاده می‌کردند.
+معماری کامپیوترهای این دوره معمولاً به صورت برداری \lr{(Von Neumann)} بود که شامل واحدهای حافظه، واحد پردازش، واحد کنترل و واحد ورودی/خروجی می‌شد.
+
+\item نسل دوم کامپیوترها
+
+در دهه ۱۹۵۰، ترانزیستورها به جای لامپ‌های خلاء در کامپیوترها استفاده شدند. این باعث کاهش حجم و افزایش سرعت کامپیوترها شد. در این دوره، کامپیوترهای دیجیتال شروع به ظهور کردند و از معماری فرمال برای طراحی استفاده می‌شد. این دوره شاهد ظهور کامپیوترهای دیجیتال و کامپیوترهای مینی‌کامپیوتر بود.
+
+\item نسل سوم کامپیوترها
+
+در دهه ۱۹۶۰، مدارهای مجتمع\LTRfootnote{\lr{IC}} جایگزین ترانزیستورها شدند. استفاده از مدارهای مجتمع باعث افزایش قابلیت پیچیدگی و کارایی کامپیوترها شد. به این معنی که تعداد بیشتری ترانزیستور و قطعه الکترونیکی را در یک تراشه کوچک‌تر قرار دادند. این امر به کامپیوترها امکان انجام عملیات پیچیده‌تر و سریع‌تر را می‌داد. به طور خلاصه، مدارهای مجتمع به کامپیوترها امکانات بیشتری را بخشیدند و آن‌ها را کارآمدتر می‌ساختند. در این دوره، معماری مینی‌کامپیوترها و سوپرکامپیوترها توسعه یافت. در این دوره، مدارهای مجتمع بزرگتر و پیچیده‌تری استفاده شدند. کامپیوترهای این دوره از معماری مجموعه دستورات\LTRfootnote{\lr{Instruction Set Architecture}} استفاده می‌کردند. معماری کامپیوتر \lr{IBM/360} از معماری‌های مشهور این دوره است.
+
+\item نسل چهارم کامپیوترها
+
+در دهه ۱۹۷۰، ریزپردازنده‌ها\LTRfootnote{\lr{Microcontroller}} به جای مدارهای مجتمع استفاده شدند. این باعث افزایش قابلیت انعطاف‌پذیری و کاهش هزینه ساخت کامپیوترها شد. در این دوره، معماری کامپیوترهای شخصی و کامپیوترهای قابل حمل توسعه یافت 
+
+\item نسل پنجم کامپیوترها
+
+در دوره نسل پنجم کامپیوترها، که در دهه 1980 آغاز شد، تحولات مهمی در معماری کامپیوتر رخ داد. در این دوره، دو نوع کامپیوتر مهم به وجود آمدند: کامپیوترهای موازی و کامپیوترهای برداری. کامپیوترهای موازی قدرت پردازش را با استفاده از چندین واحد پردازشگر به صورت همزمان افزایش می‌دادند. این کامپیوترها قابلیت انجام همزمان و همروند بسیاری از عملیات‌ها را داشتند و برای برنامه‌هایی که نیاز به پردازش موازی داشتند، بسیار مناسب بودند.
+کامپیوترهای برداری قدرت پردازش را با استفاده از پردازشگرهای برداری بهبود می‌بخشیدند. این پردازشگرها برای عملیات‌های مربوط به بردارها و ماتریس‌ها بهینه شده بودند و برای برنامه‌های علمی و مهندسی که با داده‌های برداری سر و کار داشتند، مناسب بودند.
+در این دوره، استفاده از مدارهای مجتمع فوق بزرگ\LTRfootnote{\lr{VLSI}} و مدارهای مجتمع فوق فوق بزرگ\LTRfootnote{\lr{ULSI}} نیز رایج شد. این تکنولوژی‌ها به طراحی و ساخت مدارهای بسیار پیچیده و کوچکتر از نسل‌های قبلی کمک کردند و باعث افزایش کارایی و قدرت پردازش کامپیوترها شدند.
+در این دوره، شاهد ظهور کامپیوترهای جدیدی نیز بودیم که از جمله آن‌ها می‌توان به کامپیوترهای شخصی\LTRfootnote{\lr{Personal Computers}} و سیستم‌های توزیع شده\LTRfootnote{\lr{Distributed Systems}} اشاره کرد. کامپیوترهای شخصی با عملکرد مناسب و هزینه کم، به کاربران خانگی و کسب و کارها وارد شدند و سیستم‌های توزیع شده با استفاده از شبکه‌های کامپیوتری، امکان ارتباط و همکاری بین کامپیوترها را فراهم می‌کردند.   
+
+\end{enumerate}
 
 %------------------------------------------------------------------------------------------------
 %نوشتن بیوگرافی نویسندگان الزامی می باشد.
